// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmojiSuggestions > should match the snapshot 1`] = `
<div
  class="emoji-suggestions emoji-suggestions__container"
  style="--top-distance: 0px;"
>
  <ul
    class="emoji-suggestions__list"
  >
    <li
      class="emoji-suggestions__element emoji-suggestions__element--focus"
    >
      <button
        class="emoji-suggestions__element-button"
      >
        <span
          class="emoji-suggestions__emoji"
        >
          😂
        </span>
        :
        face_with_tears_of_joy
        :
      </button>
    </li>
    <li
      class="emoji-suggestions__element"
    >
      <button
        class="emoji-suggestions__element-button"
      >
        <span
          class="emoji-suggestions__emoji"
        >
          💖
        </span>
        :
        sparkling_heart
        :
      </button>
    </li>
    <li
      class="emoji-suggestions__element"
    >
      <button
        class="emoji-suggestions__element-button"
      >
        <span
          class="emoji-suggestions__emoji"
        >
          👍
        </span>
        :
        thumbs_up
        :
      </button>
    </li>
    <li
      class="emoji-suggestions__element"
    >
      <button
        class="emoji-suggestions__element-button"
      >
        <span
          class="emoji-suggestions__emoji"
        >
          👩‍✈️
        </span>
        :
        woman_pilot
        :
      </button>
    </li>
  </ul>
</div>
`;

exports[`EmojiSuggestions > should use skin tones where supported > should use skin tone from store 1`] = `
<div
  class="emoji-suggestions emoji-suggestions__container"
  style="--top-distance: 0px;"
>
  <ul
    class="emoji-suggestions__list"
  >
    <li
      class="emoji-suggestions__element emoji-suggestions__element--focus"
    >
      <button
        class="emoji-suggestions__element-button"
      >
        <span
          class="emoji-suggestions__emoji"
        >
          😂
        </span>
        :
        face_with_tears_of_joy
        :
      </button>
    </li>
    <li
      class="emoji-suggestions__element"
    >
      <button
        class="emoji-suggestions__element-button"
      >
        <span
          class="emoji-suggestions__emoji"
        >
          💖
        </span>
        :
        sparkling_heart
        :
      </button>
    </li>
    <li
      class="emoji-suggestions__element"
    >
      <button
        class="emoji-suggestions__element-button"
      >
        <span
          class="emoji-suggestions__emoji"
        >
          👍🏽
        </span>
        :
        thumbs_up
        :
      </button>
    </li>
    <li
      class="emoji-suggestions__element"
    >
      <button
        class="emoji-suggestions__element-button"
      >
        <span
          class="emoji-suggestions__emoji"
        >
          👩🏽‍✈️
        </span>
        :
        woman_pilot
        :
      </button>
    </li>
  </ul>
</div>
`;
